# dataplug

./: .buildinfo  .gitignore  README.md  architecture.html  cloud_object.html  concepts.html  full_example.html  genindex.html  index.html  install.html  objects.inv  preproc-backends.html  py-modindex.html  pyproject.toml  requirements-development.txt  requirements.txt  search.html  searchindex.js  testing.py  workflow_sample.html
_sources/: architecture.rst.txt  cloud_object.rst.txt  concepts.rst.txt  full_example.rst.txt  index.rst.txt  install.rst.txt
_sources/preprocessing_backends/: lithops.rst.txt
_sources/types/: genomics.rst.txt  geospatial.rst.txt  text.rst.txt
cloudnative_datasets/: __init__.py  cobase.py  cochunkbase.py  dsbase.py  preprocessers.py  storage.py  util.py
cloudnative_datasets/basic/: text.py
cloudnative_datasets/compressed/: gzipped.py
cloudnative_datasets/genomics/: __init__.py  fasta.py  fastq.py  sequence.py
cloudnative_datasets/geospatial/: __init__.py  copc.py
cloudnative_datasets/preprocess/: __init__.py  base.py
dataplug/: __init__.py  clouddataset.py  cloudobject.py  core.py  dataset.py  dataslice.py  datatypes.py  entities.py  fileobject.py  partitioning.py  storage.py  util.py  version.py
dataplug/basic/: __init__.py  csv.py  csvcloudobject.py  text.py
dataplug/compressed/: __init__.py  gzipped.py
dataplug/core/: __init__.py  cloudobject.py  dataslice.py  formattemplate.py
dataplug/formats/: __init__.py
dataplug/genomics/: fasta.py  fastq.py
dataplug/geospatial/: __init__.py  copc.py  laspc.py
dataplug/metabolomics/: __init__.py  imzML.py
dataplug/preprocess/: __init__.py  backendbase.py  base.py  handler.py  preprocessor.py  result.py  stubs.py
dataplug/preprocessing/: __init__.py  backendbase.py  handler.py  joblauncher.py  metadata.py  preprocess.py  preprocessor.py
dataplug/storage/: filesystem.py  picklableS3.py  storage.py
docs/: README.md  api.md  develop-plugins.md  preprocessing.md  update_docs.sh
docs/source/: cloud_object.rst  conf.py  index.rst  model.rst  workflow_sample.rst
examples/: README.md  cog_example.py  copc_example.py  csv_dataset.py  csv_example.py  csv_part.py  fasta_example.py  fasta_index.py  fastgz_index.py  fastqgz_example.py  imzml_continuous_example.py  imzml_example.py  imzml_processed_example.py  lidar_example.py  ms_example.py  point_cloud.py  test.csv  text_example.py  vcf_example.py  word_count.py  word_count_lithops.py
examples/sample_data/: fasta_sample.fasta  fasta_sample.fasta.fai  yosemite.las
examples/sample_data.meta/: cities.csv.attrs  fasta_sample.fasta  fasta_sample.fasta.attrs  sunflower.fastq.gz.attrs  sunflower.fastq.gz.idx
lithops_datasets/: __init__.py  cloudobjectbase.py  datasetbase.py
lithops_datasets/compressed/: gzipped.py
lithops_datasets/genomics/: sequence.py
preprocessing_backends/: dummy.html  lithops.html
sample_data/: Example_Processed.imzML  cities.csv  lorem_ipsum.txt  pipeline.json  test.csv
tests/: copc_partitioning.py
types/: columnar.html  genomics.html  geospatial.html  text.html
(+84 files in other folders)
