[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataplug"
version = "0.0.1"
authors = [
    { name = "Aitor Arjona", email = "aitor.arjona@urv.cat" },
]
description = "Pluggable data types for cloud-native scientific workloads"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "numpy",
    "pandas",
    "smart_open",
    "boto3"
]

[project.optional-dependencies]
lithops = [
    "lithops"
]

[tool.setuptools.packages.find]
include = ["dataplug"]

[tool.black]
line-length = 119

[project.urls]
"Homepage" = "https://github.com/aitorarjona/cloud-native-datasets"