[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-dataplug"
dynamic = ["version"]
authors = [
    { name = "Aitor Arjona", email = "aitor.arjona@urv.cat" },
]
description = "Pluggable data types for cloud-native scientific workloads"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
    "boto3",
    "botocore",
    "numpy",
    "pandas",
    "pyarrow",
    "smart_open",
    "tqdm",
]

[project.optional-dependencies]
lithops = [
    "lithops>=2.8.0"
]

[tool.setuptools]
include-package-data = false

#[tool.setuptools.dynamic]
#version = {attr = "dataplug.version.__version__"}

[tool.setuptools.packages.find]
include = ["dataplug*"]

[tool.black]
line-length = 119

[project.urls]
"Homepage" = "https://github.com/CLOUDLAB-URV/dataplug"